data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1580.wast
;; 1. **Test Description**:     - Create a loop block with no operands and use `br_if` with a zero condition inside the loop. The loop should continue indefinitely.    - **Constraint Checking**: Validates that the loop does not exit on zero conditions, ensuring proper handling within `LOOP` type blocks.    - **Infinite Loop Relation**: Testing that the loop does not break incorrectly due to improper condition evaluation, verifying the `wizard_engine` maintains the loop parameters correctly.

(assert_invalid
  (module
    (func $loop-with-br_if
      (loop (block
        (br_if 0 (i32.const 0)) 
      ))
    )
  )
  "infinite loop due to incorrect branch handling"
)